@@ -1,5 +1,5 @@
 <?php
-// $Id: block.install,v 1.23 2009-05-13 19:42:14 webchick Exp $
+// $Id: block.install,v 1.24 2009-05-21 21:12:22 dries Exp $
 
 /**
  * @file
@@ -178,6 +178,16 @@ function block_schema() {
  */
 function block_install() {
   drupal_install_schema('block');
+  
+  // Block should go first so that other modules can alter its output 
+  // during hook_page_alter(). Almost everything on the page is a block,
+  // so before block module runs, there will not be much to alter.
+  db_update('system')
+    ->fields(array(
+      'weight' => -5,
+    ))
+    ->condition('name', 'block')
+    ->execute();
 }
 
 /**
@@ -185,4 +195,17 @@ function block_install() {
  */
 function block_uninstall() {
   drupal_uninstall_schema('block');
+}
+
+/**
+ * Set system.weight to a low value for block module.
+ * 
+ * Block should go first so that other modules can alter its output 
+ * during hook_page_alter(). Almost everything on the page is a block,
+ * so before block module runs, there will not be much to alter.
+ */
+function block_update_7000() {
+  $ret = array();
+  $ret[] = update_sql("UPDATE {system} SET weight = -5 WHERE name = 'block'");
+  return $ret;
 }
