@@ -1,5 +1,5 @@
 <?php
-// $Id: default.profile,v 1.41 2009-04-30 21:44:20 dries Exp $
+// $Id: default.profile,v 1.42 2009-05-21 21:12:25 dries Exp $
 
 /**
  * Return an array of the modules to be enabled when this profile is installed.
@@ -91,8 +91,18 @@ function default_profile_task_list() {
  */
 function default_profile_tasks(&$task, $url) {
   
-  // Enable 5 standard blocks.
+  // Enable some standard blocks.
   $values = array(
+    array(
+      'module' => 'system',
+      'delta' => 'main',
+      'theme' => 'garland',
+      'status' => 1,
+      'weight' => 0,
+      'region' => 'content',
+      'pages' => '',
+      'cache' => -1,
+    ),
     array(
       'module' => 'user',
       'delta' => 'login',
