@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.309 2009-05-16 19:07:02 dries Exp $
+// $Id: CHANGELOG.txt,v 1.310 2009-05-21 21:12:22 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -115,6 +115,10 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * Site mission is replaced with the highlighted content block region and 
       separate RSS feed description settings.
     * The footer message setting was removed in favor of custom blocks. 
+    * Made the main page content a block which can be moved and ordered
+      with other blocks in the same region.
+    * Blocks can now return structured arrays for later rendering just 
+      like page callbacks.
 - Upgraded the core JavaScript library to jQuery version 1.3.2.
 - Upgraded the jQuery Forms library to 2.21.
 
